<resources>
    <string name="app_name">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Calculator</string>
    <string name="menu_gallery">Convert N-Base</string>
    <string name="menu_slideshow">Convert km->m</string>

    <string name="input_null_message">Please input information</string>
    <string name="input_wrong_base_message">Your input do not belong to</string>
    <string name="convert_button">Convert</string>
    <string name="hex_text">HEX</string>
    <string name="dec_text">DEC</string>
    <string name="oct_text">OCT</string>
    <string name="bin_text">BIN</string>
    <string name="input_edit_text">Input value</string>

    <string name="divide_by_zero">Cannot divide by zero</string>
    <string name="standard_mode_text">Standard</string>

    <string name="dot_button">.</string>
    <string name="zero_button">0</string>
    <string name="one_button">1</string>
    <string name="two_button">2</string>
    <string name="three_button">3</string>
    <string name="four_button">4</string>
    <string name="five_button">5</string>
    <string name="six_button">6</string>
    <string name="seven_button">7</string>
    <string name="eight_button">8</string>
    <string name="nine_button">9</string>

    <string name="backspace_button">Backspace</string>
    <string name="minus_button">+/-</string>
    <string name="add_button">+</string>
    <string name="sub_button">-</string>
    <string name="multi_button">*</string>
    <string name="divide_button">/</string>
    <string name="result_button">=</string>
    <string name="c_button">C</string>
    <string name="ce_button">CE</string>

</resources>