<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.gallery.GalleryFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="210dp"
            android:layout_height="45dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:importantForAutofill="no"
            android:hint="@string/input_edit_text"/>

        <Spinner
            android:id="@+id/spinner_input"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/convert_button" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="210dp"
            android:layout_height="45dp" />

        <Spinner
            android:id="@+id/spinner_output"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:text="@string/hex_text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/resultHex"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:text="@string/dec_text"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/resultDec"
            android:layout_width="200dp"
            android:layout_height="30dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:text="@string/oct_text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/resultOct"
            android:layout_width="200dp"
            android:layout_height="30dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:text="@string/bin_text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/resultBin"
            android:layout_width="200dp"
            android:layout_height="30dp" />

    </LinearLayout>

</LinearLayout>